--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -1,29 +1,29 @@
     name: GitHub Classroom Workflow
 
-#     on: [push]
+    on: [push]
 
-#     jobs:
-#       build:
-#         name: Autograding
-#         runs-on: ubuntu-latest
-#         steps:
-#           - uses: actions/checkout@v2
+    jobs:
+      build:
+        name: Autograding
+        runs-on: ubuntu-latest
+        steps:
+          - uses: actions/checkout@v2
               
-#           - name: Setup Python ${{ matrix.python-version }}
-#             uses: actions/setup-python@v2
-#             with:
-#               python-version: ${{ matrix.python-version }}
+          - name: Setup Python ${{ matrix.python-version }}
+            uses: actions/setup-python@v2
+            with:
+              python-version: ${{ matrix.python-version }}
               
-#           - name: Cache pip
-#             uses: actions/cache@v2
-#             with:
-#               path: ~/.cache/pip
-#               key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
-#               restore-keys: |
-#                 ${{ runner.os }}-pip-
+          - name: Cache pip
+            uses: actions/cache@v2
+            with:
+              path: ~/.cache/pip
+              key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
+              restore-keys: |
+                ${{ runner.os }}-pip-
                 
-#           - name: Install Dependencies
-#             run: |
-#               pip install -r requirements.txt        
+          - name: Install Dependencies
+            run: |
+              pip install -r requirements.txt        
           
-#           - uses: education/autograding@v1
+          - uses: education/autograding@v1
